src/objects/Retail_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Event Type of the campaign</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Road Show</fullName>
                </value>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>New Car Launch</fullName>
                </value>
                <value>
                    <fullName>Joint Event</fullName>
                </value>
                <value>
                    <fullName>Showroom Event</fullName>
                </value>
                <value>
                    <fullName>Sports Marketing</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prints relevant</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Sales_quarter</fullName>
                </value>
                <value>
                    <fullName>Sales_central DM</fullName>
                </value>
                <value>
                    <fullName>Sales_new model target</fullName>
                </value>
                <value>
                    <fullName>Sales_fair</fullName>
                </value>
                <value>
                    <fullName>Sales_others</fullName>
                </value>
                <value>
                    <fullName>Sales_catalogue response</fullName>
                </value>
                <value>
                    <fullName>Finance_cross point</fullName>
                </value>
                <value>
                    <fullName>Finance_maturity</fullName>
                </value>
                <value>
                    <fullName>Finance_insurance</fullName>
                </value>
                <value>
                    <fullName>Aftersales_MOT</fullName>
                </value>
                <value>
                    <fullName>Aftersales_Mcare Inspection</fullName>
                </value>
                <value>
                    <fullName>Aftersales_inspections (After 4years)</fullName>
                </value>
                <value>
                    <fullName>Aftersales_service program</fullName>
                </value>
                <value>
                    <fullName>Aftersales_new car six month inspections</fullName>
                </value>
                <value>
                    <fullName>Aftersales_accessory</fullName>
                </value>
                <value>
                    <fullName>Aftersales_collection</fullName>
                </value>
                <value>
                    <fullName>Event_motor show</fullName>
                </value>
                <value>
                    <fullName>Event_sales</fullName>
                </value>
                <value>
                    <fullName>Event_participatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_End_Date__c</fullName>
        <label>Execution End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Start_Date__c</fullName>
        <description>This field is used to capture the start date of the execution campaign</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <description>This field is used to capture the expected revenue information</description>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <description>Feedback Comments of the campaign</description>
        <label>Feedback Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <description>The feedback status of the campaign</description>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Best_Practice_Forsmart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Best Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Best_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Best Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_List_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if the list is approved and final</description>
        <label>Final List Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Expense__c</fullName>
        <description>Gift Expense of the actual expense</description>
        <label>Gift Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historical_Actual_Invite_Customer__c</fullName>
        <description>Contains Actual Invite Customer historical data migrated from RME source system before 2014-09-01 system go-live.</description>
        <label>Historical Actual Invite Customer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Actual_Lead__c</fullName>
        <label>Historical Actual Lead</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Actual_Show_up_Customer__c</fullName>
        <description>Contains Actual Show up Customer historical data migrated from RME source system before 2014-09-01 system go-live.</description>
        <label>Historical Actual Show up Customer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAutoSegmentationExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update when auto-segmentation is completed and executed</description>
        <label>IsAutoSegmentationExecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Turn_over__c</fullName>
        <description>Retail Campaign: Labor Turn over of the campaign</description>
        <label>Labor Turn over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>Retail Campaign: Lead of the campaign</description>
        <label>Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the campaign</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_ATL_BTL__c</fullName>
        <label>ATL/BTL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media Plan</fullName>
                </value>
                <value>
                    <fullName>Event Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_Apr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Aug__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB + StarElite</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_Dec__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Feb__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Jan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Jul__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Jun__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_KPI_Type__c</fullName>
        <label>KPI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Budget</fullName>
                </value>
                <value>
                    <fullName>New Lead</fullName>
                </value>
                <value>
                    <fullName>New Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_Mar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_May__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Nov__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Oct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Sep__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_YearlyTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Yearly TA</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Retail_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales &amp; Marketing Yearly TA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Records (MonthlyTA)</relationshipLabel>
        <relationshipName>Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Car_Age__c</fullName>
        <description>Retail Campaign: Max Car Age of the campaign</description>
        <label>Max Car Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Expense__c</fullName>
        <label>Plan Expense (To)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <description>Name of the Media Company</description>
        <label>Media Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Media Type of the campaign</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OOH</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Car_Age__c</fullName>
        <description>Retail Campaign: Min Car Age of the campaign</description>
        <label>Min Car Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Expense__c</fullName>
        <label>Plan Expense (From)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Retail Campaign: Order of the campaign</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retail_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Planning &amp; Design Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Retail Campaigns (Parent Campaign)</relationshipLabel>
        <relationshipName>Retail_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relevant Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>MB Best Practice</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Records (Parent Campaign)</relationshipLabel>
        <relationshipName>Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Turn_over__c</fullName>
        <description>Retail Campaign: Parts Turn over of the campaign</description>
        <label>Parts Turn over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <description>Date for the campaign end</description>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Plan Expense of the campaign</description>
        <label>Plan Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Invite_Customer__c</fullName>
        <description>Plan Invite Customer of the campaign</description>
        <label>Plan Invite Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Lead__c</fullName>
        <description>Plan Lead of the campaign</description>
        <label>Plan Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Maintenance_Products_Sold__c</fullName>
        <description>Retail Campaign: Plan Maintenance Products Sold</description>
        <label>Plan Maintenance Products Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_No_of_Insurance_Repaired_Vehicle__c</fullName>
        <description>Retail Campaign: Plan No. of Insurance Repaired Vehicle of the campaign</description>
        <label>Plan No. of Insurance Repaired Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_No_of_Insurance_Sold__c</fullName>
        <description>Retail Campaign: Plan Insurance sold of the campaign</description>
        <label>Plan No. of Insurance Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Order__c</fullName>
        <description>Plan Order of the campaign</description>
        <label>Plan Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Show_up_Customer__c</fullName>
        <description>Plan Show up Customer of the campaign</description>
        <label>Plan Show up Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <description>Date for the campaign start</description>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of the campaign</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Enhancement</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Increase Sales</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Actual_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Actual_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2 Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2 Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Actual_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3 Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3 Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Class1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>W168</fullName>
                </value>
                <value>
                    <fullName>V168</fullName>
                </value>
                <value>
                    <fullName>W169</fullName>
                </value>
                <value>
                    <fullName>W176</fullName>
                </value>
                <value>
                    <fullName>T245</fullName>
                </value>
                <value>
                    <fullName>W246</fullName>
                </value>
                <value>
                    <fullName>C204</fullName>
                </value>
                <value>
                    <fullName>C205</fullName>
                </value>
                <value>
                    <fullName>CL203</fullName>
                </value>
                <value>
                    <fullName>W202</fullName>
                </value>
                <value>
                    <fullName>W204</fullName>
                </value>
                <value>
                    <fullName>W205</fullName>
                </value>
                <value>
                    <fullName>C215</fullName>
                </value>
                <value>
                    <fullName>C216</fullName>
                </value>
                <value>
                    <fullName>C117</fullName>
                </value>
                <value>
                    <fullName>X117</fullName>
                </value>
                <value>
                    <fullName>A208</fullName>
                </value>
                <value>
                    <fullName>A209</fullName>
                </value>
                <value>
                    <fullName>C208</fullName>
                </value>
                <value>
                    <fullName>C209</fullName>
                </value>
                <value>
                    <fullName>C218</fullName>
                </value>
                <value>
                    <fullName>C219</fullName>
                </value>
                <value>
                    <fullName>X218</fullName>
                </value>
                <value>
                    <fullName>A207</fullName>
                </value>
                <value>
                    <fullName>S210</fullName>
                </value>
                <value>
                    <fullName>S211</fullName>
                </value>
                <value>
                    <fullName>S212</fullName>
                </value>
                <value>
                    <fullName>S213</fullName>
                </value>
                <value>
                    <fullName>W210</fullName>
                </value>
                <value>
                    <fullName>W211</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Best_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region Best Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Dealer_Name__r.Dealer_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Central_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relevant Central Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Retail Campaigns</relationshipLabel>
        <relationshipName>Retail_Central_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_Retail_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relevant Retail Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retail_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>AS Retail Campaign, S&amp;M Event Retail Campaign, S&amp;M Media Retail Campaign, Segmentation Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Records (Relevant Retail Campaign)</relationshipLabel>
        <relationshipName>Relevant_Retail_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>This field is used to capture the response date</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Candidate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>Retail_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>AS Retail Campaign, S&amp;M Event Retail Campaign, S&amp;M Media Retail Campaign</value>
            </filterItems>
            <filterItems>
                <field>Retail_Campaign__c.Actual_Start_Date__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>Retail_Campaign__c.Plan_Start_Date__c</valueField>
            </filterItems>
            <filterItems>
                <field>Retail_Campaign__c.Actual_End_Date__c</field>
                <operation>lessOrEqual</operation>
                <valueField>Retail_Campaign__c.Plan_End_Date__c</valueField>
            </filterItems>
            <filterItems>
                <field>Retail_Campaign__c.Feedback_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Records (Candidate)</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segmentation_Base__c</fullName>
        <description>This setting field is used to capture if the segmentation (either for wholesales segmentation in Marketing Cloud or for retail in SFDC segmentation) is done on the customer, vehicle or contract data basis</description>
        <label>Segmentation Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segmentation Criteria</label>
        <referenceTo>Segmentation_Criteria__c</referenceTo>
        <relationshipLabel>Retail Campaigns</relationshipLabel>
        <relationshipName>Retail_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segmentation_Date__c</fullName>
        <label>Segmentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_up_Rate__c</fullName>
        <formula>IF(Actual_Invite_Customer__c==0,0,Actual_Show_up_Customer__c  / Actual_Invite_Customer__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show up Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Showroom__c</fullName>
        <formula>IF( RecordType.DeveloperName == &apos;Sales_Marketing&apos; || RecordType.DeveloperName == &apos;Aftersales&apos; ,  Y_Dealer_Name__r.Branch_name__c , Dealer_Name__r.Branch_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Showroom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Area__c</fullName>
        <description>Site Area of the campaign</description>
        <label>Site Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Cost__c</fullName>
        <description>Site Cost of the actual expense</description>
        <label>Site Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Site of the campaign</description>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field is used to capture the start date of the campaign</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field can be used to track the progress of the campaign as part of campaign life cycle</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT(Dealer_Name__r.Dealer_MB_Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Retail_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_AS_Turnover_of_Previous_Year__c</fullName>
        <formula>Yearly_TA__r.Y_Total_After_sales_Turnover_of_Previous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AS Turnover of Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Expense__c</fullName>
        <formula>Q1_Actual_Expense__c + Q2_Actual_Expense__c + Q3_Actual_Expense__c + Q4_Actual_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <description>This field is used to capture the total budget being allocated for the campaign activity</description>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>